--- a/LMS/Areas/Admin/Views/Grade/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Grade/Index.cshtml
@@ -29,7 +29,7 @@
                             </div>
 
                             <table id="gradepage" class="display" style="width:100%">
-                                <thead>
+                                <thead class="aThead">
                                     <tr>
                                         <th>ID</th>
                                         <th>Grade Name</th>
@@ -70,6 +70,18 @@
                                         </tr>
                                     }
                                 </tbody>
+                                <tfoot class="aThead">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Grade Name</th>
+                                        <th>Start From</th>
+                                        <th>End On</th>
+                                        <th>Class Name</th>
+                                        <th>Section Name</th>
+                                        <th>Subject Name</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </tfoot>
                             </table>
 
                         </div>
@@ -157,11 +169,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
+                        <a href="#">
+                            APEX E-LEARNING
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -170,14 +182,14 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
@@ -201,16 +213,17 @@
         };
 
 
-
+       
         var messageError = '@(ViewBag.Error)';
         var messageSuccess = '@(ViewBag.Success)';
 
 
         if (messageSuccess.length > 0) {
-            //console.log(message);
+            
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0) {
+           
             toastr.error(messageError);
         }
 
@@ -252,11 +265,47 @@
 
 
 
+        //$('#gradepage').DataTable({
+        //    /* Disable initial sort */
+        //    "aaSorting": [],
+        //    //"pageLength":25
+        //});
+
+
         $('#gradepage').DataTable({
-            /* Disable initial sort */
             "aaSorting": [],
-            //"pageLength":25
+            "bLengthChange": false,
+            "fixedHeader": { header: true, footer: true },
+
+            responsive: false,
+            //autoWidth: false,
+            //aaSorting: [[2, 'asc']],
+            //cache: true,
+
+
+            initComplete: function () {
+                this.api().columns([1, 4, 5, 6]).every(function () {
+                    var column = this;
+                    //var theadname = $('#AttendanceDetailPage th').eq([d]).text();
+                    var select = $('<select><option value="">ALL</option></select>')
+                        .appendTo($(column.header()).empty())
+                        .on('change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex(
+                                $(this).val()
+                            );
+
+                            column
+                                .search(val ? '^' + val + '$' : '', true, false)
+                                .draw();
+                        });
+
+                    column.data().unique().sort().each(function (d, j) {
+                        select.append('<option value="' + d + '">' + d + '</option>')
+                    });
+                });
+            }
         });
+
 
     });
 </script>
