--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -30,7 +30,7 @@
                             </div>
 
                             <table id="userpage" class="display" style="width: 100%;">
-                                <thead>
+                                <thead class="aThead">
                                     <tr>
                                         <th>Id</th>
                                         <th>User Name</th>
@@ -215,11 +215,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
+                        <a href="#">
+                            APEX E-LEARNING
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -228,14 +228,14 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
@@ -265,7 +265,7 @@
             //console.log(message);
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0)  {
             toastr.error(messageError);
         }
 
