--- a/LMS/Areas/Admin/Views/Student/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Student/Index.cshtml
@@ -28,7 +28,7 @@
                             </div>
 
                             <table id="studentpage" class="display" style="width:100%">
-                                <thead>
+                                <thead class="aThead">
                                     <tr>
                                         <th>ID</th>
                                         <th>Name</th>
@@ -93,7 +93,7 @@
                     <div id="assignStudentClassModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" asp-controller="student" asp-action="addStudentClass">
+                                <form method="post" asp-controller="student" asp-action="addStudentClass" id="addForm">
                                     <div class="modal-header">
                                         <h4 class="modal-title">Add Student Class</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -173,11 +173,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
+                        <a href="#">
+                            APEX E-LEARNING
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -186,14 +186,14 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
@@ -226,12 +226,26 @@
             //console.log(message);
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0)  {
             toastr.error(messageError);
         }
         
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
+
+
+        //Check If Class and Section Is Selected
+        $("#addForm").submit(function (event) {
+
+            if ($("#Class_Id").val() === "0" || $("#Section_Id").val() === "0") {
+
+                event.preventDefault();
+                toastr.error("Kindly Select Class And Section");
+
+            }
+
+
+        });
 
 
         //Get Student_Id for Delete Added By Absar
