--- a/LMS/Areas/Admin/Views/Teacher/AssignTeacherSubject.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/AssignTeacherSubject.cshtml
@@ -5,187 +5,228 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="dashboard" id="dashboard">
 
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
 
-                    <div class="container-fluid">
-                        <div class="table-responsive">
-                            <div class="table-wrapper">
-                                <div class="table-title">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <h2><b>Add Teacher Subjects</b></h2>
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+
+                <div class="container-fluid">
+                    <div class="table-responsive">
+                        <div class="table-wrapper">
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h2><b>Add Teacher Subjects</b></h2>
+                                    </div>
+                                    @*<div class="col-md-6 pull-right">
+                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                            <a href="#deleteClassSectionModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                        </div>*@
+                                </div>
+                            </div>
+                            <form asp-action="assignTeacherSubject" method="post" id="addForm">
+
+                                <br /><br />
+                                <div class="row">
+                                    <div class="col-md-4 pr-1">
+
+                                        <div class="form-group">
+                                            <label>Teacher Id </label>
+                                            <input type="text" class="form-control" placeholder="Teacher ID" readonly="readonly" id="Teacher_Id" name="Teacher_Id" asp-for="Teacher_Id">
                                         </div>
-                                        @*<div class="col-md-6 pull-right">
-                                                <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
-                                                <a href="#deleteClassSectionModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
-                                            </div>*@
+
+                                    </div>
+                                    <div class="col-md-4 pr-1">
+
+                                        <div class="form-group">
+                                            <label>Teacher Name</label>
+                                            <input type="text" class="form-control" placeholder="Teacher Name" readonly="readonly" id="Teacher_Name" name="Teacher_Name" asp-for="Teacher_Name">
+                                        </div>
+
+                                    </div>
+
+                                    <input hidden asp-for="Teacher_Id" />
+
+                                </div>
+
+                                <br /><br />
+                                <div class="row">
+                                    <div class="col-md-4 pr-1">
+                                        <div class="form-group">
+                                            <label>Class Name</label>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes"></select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4 pr-1">
+                                        <div class="form-group">
+                                            <label>Section Name</label>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections"></select>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <br />
+
+                                <div class="row">
+                                    <div class="col-md-8 pr-1">
+                                        <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
+                                            <thead>
+                                                <tr>
+                                                    <th><input type="checkbox" class="checkbox-radios" id="selectAllSubjects" /></th>
+                                                    <th>Subject Name</th>
+                                                    <th></th>
+
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+
+                                                @if (Model != null)
+                                                {
+                                                    @for (int item = 0; item < Model.Subjects.Count; item++)
+                                                    {
+                                                        <tr>
+                                                            <td><input type="checkbox" class="checkbox-radios" name="lstSubject" value="@Model.Subjects[item].Subject_Id" id="chkSubject"/></td>
+                                                            <td>@Model.Subjects[item].Subject_Name</td>
+                                                            <td><input type="hidden" class="Subject_Id" value="@Model.Subjects[item].Subject_Id" /></td>
+                                                        </tr>
+                                                    }
+                                                }
+
+
+                                            </tbody>
+                                        </table>
+
                                     </div>
                                 </div>
-                                <form asp-action="assignTeacherSubject" method="post">
-
-                                    <br /><br />
-                                    <div class="row">
-                                        <div class="col-md-4 pr-1">
-
-                                            <div class="form-group">
-                                                <label>Teacher Id </label>
-                                                <input type="text" class="form-control" placeholder="Teacher ID" disabled="" id="Teacher_Id" name="Teacher_Id" asp-for="Teacher_Id">
-                                            </div>
-
-                                        </div>
-                                        <div class="col-md-4 pr-1">
-
-                                            <div class="form-group">
-                                                <label>Teacher Name</label>
-                                                <input type="text" class="form-control" placeholder="Teacher Name" disabled="" id="Teacher_Name" name="Teacher_Name" asp-for="Teacher_Name">
-                                            </div>
-
-                                        </div>
-
-                                        <input hidden asp-for="Teacher_Id" />
-
-                                    </div>
-
-                                    <br /><br />
-                                    <div class="row">
-                                        <div class="col-md-4 pr-1">
-                                            <div class="form-group">
-                                                <label>Class Name</label>
-                                                <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes"></select>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-md-4 pr-1">
-                                            <div class="form-group">
-                                                <label>Section Name</label>
-                                                <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections"></select>
-                                            </div>
-                                        </div>
-
-                                    </div>
 
 
-                                    <br />
-
-                                    <div class="row">
-                                        <div class="col-md-8 pr-1">
-                                            <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
-                                                <thead>
-                                                    <tr>
-                                                        <th><input type="checkbox" class="checkbox-radios" id="selectAllSubjects" /></th>
-                                                        <th>Subject Name</th>
-                                                        <th></th>
-
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-
-                                                    @if (Model != null)
-                                                    {
-                                                        @for (int item = 0; item < Model.Subjects.Count; item++)
-                                                        {
-                                                            <tr>
-                                                                <td><input type="checkbox" class="checkbox-radios" name="lstSubject" value="@Model.Subjects[item].Subject_Id" /></td>
-                                                                <td>@Model.Subjects[item].Subject_Name</td>
-                                                                <td><input type="hidden" class="Subject_Id" value="@Model.Subjects[item].Subject_Id" /></td>
-                                                            </tr>
-                                                        }
-                                                    }
-
-
-                                                </tbody>
-                                            </table>
-
+                                <div class="row">
+                                    <div class="col-md-4 pr-1">
+                                        <div class="form-group">
+                                            <input type="submit" value="Assign Subject" class="btn btn-primary" />
                                         </div>
                                     </div>
 
 
-                                    <div class="row">
-                                        <div class="col-md-4 pr-1">
-                                            <div class="form-group">
-                                                <input type="submit" value="Assign Subject" class="btn btn-primary" />
-                                            </div>
-                                        </div>
+                                </div>
 
 
-                                    </div>
+                                <div class="clearfix">
 
-
-                                    <div class="clearfix">
-
-                                    </div>
-                                </form>
-                            </div>
+                                </div>
+                            </form>
                         </div>
-
-
-
-
-
-
-
-
-
-
-
                     </div>
+
+
+
+
+
+
+
+
+
+
+
                 </div>
             </div>
         </div>
-
-
-
-
-        <footer class="footer">
-            <div class=" container-fluid ">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="https://www.creative-tim.com">
-                                Karachi Grammar School
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://presentation.creative-tim.com">
-                                About Us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://blog.creative-tim.com">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright" id="copyright">
-                    &copy;
-                    <script>
-                        document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                    </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-                </div>
-            </div>
-        </footer>
     </div>
+
+
+
+
+    <footer class="footer">
+        <div class=" container-fluid ">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">
+                            APEX E-LEARNING
+                        </a>
+                    </li>
+                    @*<li>
+                    <a href="http://presentation.creative-tim.com">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="http://blog.creative-tim.com">
+                        Blog
+                    </a>
+                </li>*@
+                </ul>
+            </nav>
+            <div class="copyright" id="copyright">
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
+            </div>
+        </div>
+    </footer>
 </div>
 
 
 
 
 <script src="~/Dashboard/assets/js/core/jquery.min.js"></script>
+<link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
+<script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 <script>
 
     $(document).ready(function () {
 
+        toastr.options = {
+            "positionClass": "toast-top-center",
+            "showDuration": "5000",
+            "hideDuration": "5000",
+            "timeOut": "5000",
+            "extendedTimeOut": "5000",
+        };
+        
+        var messageError = '@(ViewBag.Error)';
+        var messageSuccess = '@(ViewBag.Success)';
+        
+
+        if (messageSuccess.length > 0) {
+            
+            toastr.success(messageSuccess);
+        }
+        else if (messageError.length > 0) {
+            toastr.error(messageError);
+        }
+
+
 
         $('#selectAllSubjects').click(function (e) {
             $(this).closest('table').find('td input:checkbox').prop('checked', this.checked);
+        });
+
+
+        //Check If Class and Section Is Selected
+        $("#addForm").submit(function (event) {
+
+
+
+            var ClassName = $("#Class_Id").val();
+            var SectionName = $("#Section_Id").val();
+
+            if (ClassName === "-1" || SectionName === "-1") {
+
+                event.preventDefault();
+                toastr.error("Kindly Select Class,Section And Subject");
+
+            }
+
+
         });
 
     });
