--- a/LMS/Areas/Students/Views/Test/Index.cshtml
+++ b/LMS/Areas/Students/Views/Test/Index.cshtml
@@ -104,7 +104,7 @@
 
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0)  {
             toastr.error(messageError);
         }
 
