--- a/LMS/Areas/Teachers/Views/Announcement/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Announcement/Index.cshtml
@@ -246,11 +246,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
+                        <a href="#">
+                            APEX E-LEARNING
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -259,14 +259,14 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
@@ -319,8 +319,7 @@
                 url: '/teachers/announcement/editAnnouncement/' + id,
                 success: function (objAnnouncement) {
 
-                    debugger;
-
+                    
                     $('#editAnnouncementModal #Announcement_Id').val(objAnnouncement.announcement_Id);
                     $('#editAnnouncementModal #Announcement_Detail').val(objAnnouncement.announcement_Detail);
 
