--- a/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
@@ -22,7 +22,7 @@
                                         <h2><b>Lesson  List</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
-                                        <a asp-area="teachers" asp-controller="lecture" asp-action="addLecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lecture</span></a>
+                                        <a asp-area="teachers" asp-controller="lecture" asp-action="addLecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lesson</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -119,11 +119,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
+                        <a href="#">
+                            APEX E-LEARNING
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -132,14 +132,14 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
