--- a/LMS/Areas/Teachers/Views/Test/ManageTest.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/ManageTest.cshtml
@@ -106,7 +106,7 @@
 
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0)  {
             toastr.error(messageError);
         }
 
